--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 		<div class="background_image" style="background-image:url(images/video.jpg)"></div>
 		<div class="video_section_content d-flex flex-column align-items-center justify-content-center text-center">
 			<div class="video_section_title">Comida para el alma</div>
-			<div class="video_section_icon"><a class="vimeo video_button" href="https://player.vimeo.com/video/99340873?autoplay=1&loop=1&title=0&autopause=0"><i class="fa fa-play" aria-hidden="true"></i></a></div>
+			<div class="video_section_icon"><a class="vimeo video_button" href="https://www.youtube.com/embed/qozV91dyVig"><i class="fa fa-play" aria-hidden="true"></i></a></div>
 		</div>
 	</div>
 
