--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<li><a href="contact.html">contacto</a></li>
 			</ul>
 		</div>
-		<div class="menu_reservations_phone ml-auto">Reservations: 624818116</div>
+		<div class="menu_reservations_phone ml-auto">Reservations: <a href="https://api.whatsapp.com/send?phone=+52624818116">624818116</a></div>
 	</div>
 	
 	<!-- Home -->
@@ -123,10 +123,10 @@
 					</div>
 					<div class="row">
 						<div class="col-xl-4 col-md-6 intro_col">
-							<div class="intro_image"><img src="images/intro_1.jpg" alt="https://unsplash.com/@quanle2819"></div>
+							<div class="intro_image"><img src="images/ambiente1.png" alt="https://unsplash.com/@quanle2819"></div>
 						</div>
 						<div class="col-xl-4 col-md-6 intro_col">
-							<div class="intro_image"><img src="images/intro_2.jpg" alt="https://unsplash.com/@fabmag"></div>
+							<div class="intro_image"><img src="images/ambiente2.png" alt="https://unsplash.com/@fabmag"></div>
 						</div>
 					</div>
 				</div>	
@@ -137,7 +137,7 @@
 	<!-- Video -->
 
 	<div class="video_section">
-		<div class="background_image" style="background-image:url(images/video.jpg)"></div>
+		<div class="background_image" style="background-image:url(images/squid.png)"></div>
 		<div class="video_section_content d-flex flex-column align-items-center justify-content-center text-center">
 			<div class="video_section_title">Comida para el alma</div>
 			<div class="video_section_icon"><a class="vimeo video_button" href="https://www.youtube.com/embed/qozV91dyVig"><i class="fa fa-play" aria-hidden="true"></i></a></div>
