--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
 				<div class="row">
 					<div class="col-lg-7 offset-lg-5">
 						<div class="sig_image">
-							<div class="background_image" style="background-image:url(images/sig.jpg)"></div>
-							<img src="images/sig.jpg" alt="">
+							<div class="background_image" style="background-image:url(images/burger.png)"></div>
+							<img src="images/burger.png" alt="">
 						</div>
 					</div>
 				</div>
