--- a/elements.html
+++ b/elements.html
@@ -76,7 +76,7 @@
 				<li><a href="index.html">home</a></li>
 				<li><a href="about.html">Sobre nosotros</a></li>
 				<li><a href="menu.html">menu</a></li>
-				<li><a href="#">delivery</a></li>
+				<li><a href="#">ENVÍO</a></li>
 				<li><a href="blog.html">blog</a></li>
 				<li><a href="contact.html">contact</a></li>
 			</ul>
@@ -371,7 +371,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="reservations_content d-flex flex-column align-items-center justify-content-center">
-						<div class="res_stars page_subtitle">5 Stars</div>
+						<div class="res_stars page_subtitle">Chef Marco</div>
 						<div class="res_title">Make a Reservation</div>
 						<div class="res_form_container">
 							<form action="#" id="res_form" class="res_form">
@@ -427,7 +427,7 @@
 						<ul>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Dirección:</div></div>
-								<div class="footer_contact_text">C. de los Caminos del Norte, 50014 Zaragoza</div>
+								<div class="footer_contact_text">C. de los Caminos del Norte 5/7, 50014 Zaragoza</div>
 							</li>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Teléfono:</div></div>
