--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
 <link rel="stylesheet" type="text/css" href="styles/about.css">
 <link rel="stylesheet" type="text/css" href="styles/about_responsive.css">
 <link rel="stylesheet" type="text/css" href="styles/logo.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -44,7 +45,11 @@
 								<li><a href="contact.html">Contacto</a></li>
 							</ul>
 						</nav>
-						<div class="reservations_phone ml-auto">Reservations: 624818116</div>
+						<div class="reservations_phone ml-auto">
+							<a href="https://wa.me/624818116">
+							  <i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
+							</a>
+						  </div>
 					</div>
 				</div>
 			</div>
@@ -76,12 +81,14 @@
 				<li><a href="index.html">home</a></li>
 				<li><a href="about.html">Sobre nosotros</a></li>
 				<li><a href="menu.html">menu</a></li>
-				<li><a href="#">delivery</a></li>
+				<li><a href="#">ENVÍO</a></li>
 				<li><a href="blog.html">blog</a></li>
 				<li><a href="contact.html">contact</a></li>
 			</ul>
 		</div>
-		<div class="menu_reservations_phone ml-auto">Reservations: 624818116</div>
+		<div class="menu_reservations_phone ml-auto"><a href="https://wa.me/624818116">
+			<i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
+		  </a></div>
 	</div>
 	
 	<!-- Home -->
@@ -250,7 +257,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="reservations_content d-flex flex-column align-items-center justify-content-center">
-						<div class="res_stars page_subtitle">5 Stars</div>
+						<div class="res_stars page_subtitle">Chef Marco</div>
 						<div class="res_title">Make a Reservation</div>
 						<div class="res_form_container">
 							<form action="#" id="res_form" class="res_form">
@@ -306,7 +313,7 @@
 						<ul>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Dirección:</div></div>
-								<div class="footer_contact_text">C. de los Caminos del Norte, 50014 Zaragoza</div>
+								<div class="footer_contact_text">C. de los Caminos del Norte 5/7, 50014 Zaragoza</div>
 							</li>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Teléfono:</div></div>
