--- a/menu.html
+++ b/menu.html
@@ -39,7 +39,7 @@
 								<li><a href="index.html">home</a></li>
 								<li><a href="about.html">Sobre nosotros</a></li>
 								<li><a href="menu.html">menu</a></li>
-								<li><a href="#">ENVÍO</a></li>
+								<li><a href="delivery.html">Envío</a></li>
 								<li><a href="blog.html">blog</a></li>
 								<li><a href="contact.html">contact</a></li>
 							</ul>
@@ -80,7 +80,7 @@
 				<li><a href="index.html">home</a></li>
 				<li><a href="about.html">Sobre nosotros</a></li>
 				<li><a href="menu.html">menu</a></li>
-				<li><a href="#">envio</a></li>
+				<li><a href="delivery.html">Envío</a></li>
 				<li><a href="blog.html">blog</a></li>
 				<li><a href="contact.html">contact</a></li>
 			</ul>
@@ -141,7 +141,7 @@
 
 				<!-- RACIONES -->
 				<div class="col-lg-4 themenu_column">
-					<div class="themenu_image"><img src="images/starters.jpg" alt=""></div>
+					<div class="themenu_image"><img src="images/sandwich.png" alt=""></div>
 					<div class="themenu_col trans_400">
 						<div class="themenu_col_title raciones-toggle">RACIONES</div>
 						<div class="dish_list raciones-content">
@@ -303,7 +303,7 @@
 
 				<!-- RACIONES DE MARISCO -->
 				<div class="col-lg-4 themenu_column">
-					<div class="themenu_image"><img src="images/main.jpg" alt=""></div>
+					<div class="themenu_image"><img src="images/arancini.png" alt=""></div>
 					<div class="themenu_col trans_400">
 						<div class="themenu_col_title raciones-de-marisco-toggle">RACIONES DE MARISCO</div>
 						<div class="dish_list raciones-de-marisco-content">
@@ -2059,15 +2059,17 @@
 						<ul>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Dirección:</div></div>
-								<div class="footer_contact_text">C. de los Caminos del Norte 5/7, 50014 Zaragoza</div>
+								<div class="footer_contact_text"><a href="https://www.google.com/maps/search/?api=1&query=C.+de+los+Caminos+del+Norte+5%2F7%2C+50014+Zaragoza" target=”_blank”>
+									C. de los Caminos del Norte 5/7, 50014 Zaragoza
+								  </a></div>
 							</li>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Teléfono:</div></div>
-								<div class="footer_contact_text">624818116</div>
+								<div class="footer_contact_text"><a href="https://wa.me/34624818116" target=”_blank”>34624818116</a></div>
 							</li>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Mail:</div></div>
-								<div class="footer_contact_text">yourmail@gmail</div>
+								<div class="footer_contact_text"><a href="mailto:info@acasadimarco.es" target=”_blank”>info@acasadimarco.es</a></div>
 							</li>
 						</ul>
 					</div>
