--- a/menu.html
+++ b/menu.html
@@ -2005,7 +2005,7 @@
 						<div class="res_stars page_subtitle">Chef Marco</div>
 						<div class="res_title">Make a Reservation</div>
 						<div class="res_form_container">
-							<form action="#" id="res_form" class="res_form">
+							<!-- <form action="#" id="res_form" class="res_form">
 								<div class="d-flex flex-sm-row flex-column align-items-center justify-content-start">
 									<input type="text" id="datepicker" class="res_input" required="required">
 									<input type="text" class="res_input timepicker" required="required">
@@ -2017,8 +2017,9 @@
 										<option>6 person</option>
 									</select>
 								</div>
-								<button class="res_button">Make a Reservation</button>
-							</form>
+								
+							</form> -->
+							<a href="https://wa.me/34624818116" target="_blank"><button class="res_button">Make a Reservation</button></a>
 						</div>
 					</div>
 				</div>
