--- a/contact.html
+++ b/contact.html
@@ -133,15 +133,17 @@
 							<ul class="contact_list">
 								<li class="d-flex flex-row align-items-start justify-content-start">
 									<div><div>Address</div></div>
-									<div>C. de los Caminos del Norte 5/7, 50014 Zaragoza</div>
+									<div><a href="https://www.google.com/maps/search/?api=1&query=C.+de+los+Caminos+del+Norte+5%2F7%2C+50014+Zaragoza" target=”_blank”>
+									C. de los Caminos del Norte 5/7, 50014 Zaragoza
+								  </a></div>
 								</li>
 								<li class="d-flex flex-row align-items-start justify-content-start">
 									<div><div>Phone</div></div>
-									<div>624818116</div>
+									<div><a href="https://wa.me/34624818116" target=”_blank”>34624818116</a></div>
 								</li>
 								<li class="d-flex flex-row align-items-start justify-content-start">
 									<div><div>E-mail</div></div>
-									<div>info@acasadimarco.es.com</div>
+									<div><a href="mailto:info@acasadimarco.es" target=”_blank”>info@acasadimarco.es</a></div>
 								</li>
 							</ul>
 							<div class="contact_social">
@@ -187,7 +189,7 @@
 						<div class="res_stars page_subtitle">Chef Marco</div>
 						<div class="res_title">Make a Reservation</div>
 						<div class="res_form_container">
-							<form action="#" id="res_form" class="res_form">
+							<!-- <form action="#" id="res_form" class="res_form">
 								<div class="d-flex flex-sm-row flex-column align-items-center justify-content-start">
 									<input type="text" id="datepicker" class="res_input" required="required">
 									<input type="text" class="res_input timepicker" required="required">
@@ -199,8 +201,9 @@
 										<option>6 person</option>
 									</select>
 								</div>
-								<button class="res_button">Make a Reservation</button>
-							</form>
+								
+							</form> -->
+							<a href="https://wa.me/34624818116" target="_blank"><button class="res_button">Make a Reservation</button></a>
 						</div>
 					</div>
 				</div>
