--- a/contact.html
+++ b/contact.html
@@ -223,9 +223,15 @@
 						<div class="footer_logo_title">A Casa di</div>
 						<div class="footer_logo_subtitle">Marco</div>
 					</div>
-					<div class="copyright"><!-- Link back to N.G. can't be removed. Template is licensed under CC BY 3.0. -->
-<p style="line-height: 1.2;">Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://N.G..com" target="_blank">N.G.</a></p>
-<!-- Link back to N.G. can't be removed. Template is licensed under CC BY 3.0. --></div>
+					<div class="copyright"><div class="contact_social">
+								<ul class="d-flex flex-row align-items-center justify-content-start">
+									<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+									<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+									<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+									<li><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+									<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+								</ul>
+							</div></div>
 				</div>
 
 				<!-- Footer About -->
