--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>The Menu</title>
+<title>A casa di Marco</title>
+<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="A casa di Marco">
