--- a/menu.html
+++ b/menu.html
@@ -397,7 +397,7 @@
 
 				<!-- TOSTADAS -->
 				<div class="col-lg-4 themenu_column">
-					<div class="themenu_image"><img src="images/deserts.jpg" alt=""></div>
+					<div class="themenu_image"><img src="images/guacamole.png" alt=""></div>
 					<div class="themenu_col trans_400">
 						<div class="themenu_col_title tostadas-toggle">TOSTADAS</div>
 						<div class="dish_list tostadas-content">
@@ -1918,8 +1918,8 @@
 								<div class="sig_content">
 									<div class="rating_r sig_rating rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
 									<div class="sig_name_container d-flex flex-row align-items-start justify-content-start">
-										<div class="sig_name">Pork Tenderloin marinated in Green Pepper</div>
-										<div class="sig_price ml-auto">$20</div>
+										<div class="sig_name">HUEVOS ROTOS CON CHISTORRA 10,5€ O CON JAMÓN IBÉRICO</div>
+										<div class="sig_price ml-auto">12.8€</div>
 									</div>
 									<div class="sig_content_list">
 										<ul class="d-flex flex-row align-items-center justify-content-start">
@@ -1933,7 +1933,7 @@
 								</div>
 							</div>
 							<div class="col-lg-6 sig_col">
-								<div class="sig_image"><img src="images/sig_1.jpg" alt=""></div>
+								<div class="sig_image"><img src="images/iberico.png" alt=""></div>
 							</div>
 						</div>
 					</div>
@@ -1945,22 +1945,23 @@
 								<div class="sig_content">
 									<div class="rating_r sig_rating rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
 									<div class="sig_name_container d-flex flex-row align-items-start justify-content-start">
-										<div class="sig_name">Beef Tartar with forest mushroms</div>
-										<div class="sig_price ml-auto">$23</div>
+										<div class="sig_name">Lasagna</div>
+										<div class="sig_price ml-auto">10.5€</div>
 									</div>
 									<div class="sig_content_list">
 										<ul class="d-flex flex-row align-items-center justify-content-start">
-											<li>Pork</li>
-											<li>Tenderloin</li>
-											<li>Green Pepper</li>
-											<li>Veggies</li>
+											<li>Tomate</li>
+											<li>Cebolla</li>
+											<li>Zanahoria</li>
+											<li>Apio</li>
+											<li>Ajo</li>
 										</ul>
 									</div>
 									<div class="button sig_button trans_200"><a href="#">Order Now</a></div>
 								</div>
 							</div>
 							<div class="col-lg-6 sig_col">
-								<div class="sig_image"><img src="images/sig_2.jpg" alt=""></div>
+								<div class="sig_image"><img src="images/lasagna.jpg" alt=""></div>
 							</div>
 						</div>
 					</div>
@@ -1972,22 +1973,22 @@
 								<div class="sig_content">
 									<div class="rating_r sig_rating rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
 									<div class="sig_name_container d-flex flex-row align-items-start justify-content-start">
-										<div class="sig_name">Beef Steak with sauted vegetables</div>
-										<div class="sig_price ml-auto">$20</div>
+										<div class="sig_name">Tiramisu</div>
+										<div class="sig_price ml-auto">5.9€</div>
 									</div>
 									<div class="sig_content_list">
 										<ul class="d-flex flex-row align-items-center justify-content-start">
-											<li>Pork</li>
-											<li>Tenderloin</li>
-											<li>Green Pepper</li>
-											<li>Veggies</li>
+											<li>Cacao</li>
+											<li>Mascarpone</li>
+											<li>Huevos</li>
+											<li>Café</li>
 										</ul>
 									</div>
 									<div class="button sig_button trans_200"><a href="#">Order Now</a></div>
 								</div>
 							</div>
 							<div class="col-lg-6 sig_col">
-								<div class="sig_image"><img src="images/sig_3.jpg" alt=""></div>
+								<div class="sig_image"><img src="images/tiramisu.png" alt=""></div>
 							</div>
 						</div>
 					</div>
