--- a/menu.html
+++ b/menu.html
@@ -1918,7 +1918,7 @@
 								<div class="sig_content">
 									<div class="rating_r sig_rating rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
 									<div class="sig_name_container d-flex flex-row align-items-start justify-content-start">
-										<div class="sig_name">HUEVOS ROTOS CON CHISTORRA 10,5€ O CON JAMÓN IBÉRICO</div>
+										<div class="sig_name">HUEVOS ROTOS CON JAMÓN IBÉRICO</div>
 										<div class="sig_price ml-auto">12.8€</div>
 									</div>
 									<div class="sig_content_list">
