--- a/menu.html
+++ b/menu.html
@@ -1923,10 +1923,9 @@
 									</div>
 									<div class="sig_content_list">
 										<ul class="d-flex flex-row align-items-center justify-content-start">
-											<li>Pork</li>
-											<li>Tenderloin</li>
-											<li>Green Pepper</li>
-											<li>Veggies</li>
+											<li>Jamón Ibérico</li>
+											<li>Huevos</li>
+											<li>Aceite de oliva virgen extra</li>
 										</ul>
 									</div>
 									<div class="button sig_button trans_200"><a href="#">Order Now</a></div>
