--- a/menu.html
+++ b/menu.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>A casa di Marco</title>
-<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="A casa di Marco">
