fotocattedrale pie pagina

--- a/elements.html
+++ b/elements.html
@@ -366,7 +366,7 @@
 	<!-- Reservations -->
 
 	<div class="reservations text-center">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/reservations.jpg" data-speed="0.8"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/cattedrale2.png" data-speed="0.8"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col">
