aggiunta lasagna tegamino all home page

--- a/index.html
+++ b/index.html
@@ -167,15 +167,16 @@
 							<div class="sig_title"><h1>Nuestro plato estrella</h1></div>
 							<div class="rating_r sig_rating rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
 							<div class="sig_name_container d-flex flex-row align-items-start justify-content-start">
-								<div class="sig_name">Pork Tenderloin marinated in Green Pepper</div>
+								<div class="sig_name">La lasagna tradizionale italiana</div>
 								<div class="sig_price ml-auto">$20</div>
 							</div>
 							<div class="sig_content_list">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li>Pork</li>
-									<li>Tenderloin</li>
-									<li>Green Pepper</li>
-									<li>Veggies</li>
+									<li>Tomate</li>
+									<li>Cebolla</li>
+									<li>Zanahoria</li>
+									<li>Apio</li>
+									<li>Ajo</li>
 								</ul>
 							</div>
 							<div class="button sig_button trans_200"><a href="#">Order Now</a></div>
@@ -189,8 +190,8 @@
 				<div class="row">
 					<div class="col-lg-7 offset-lg-5">
 						<div class="sig_image">
-							<div class="background_image" style="background-image:url(images/burger.png)"></div>
-							<img src="images/burger.png" alt="">
+							<div class="background_image" style="background-image:url(images/tegamino.jpeg)"></div>
+							<img src="images/tegamino.jpeg" alt="">
 						</div>
 					</div>
 				</div>
