fixed social icon on contact page

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 							<div class="rating_r sig_rating rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
 							<div class="sig_name_container d-flex flex-row align-items-start justify-content-start">
 								<div class="sig_name">La lasagna tradizionale italiana</div>
-								<div class="sig_price ml-auto">$20</div>
+								<div class="sig_price ml-auto">10.5€</div>
 							</div>
 							<div class="sig_content_list">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
