--- a/delivery.html
+++ b/delivery.html
@@ -228,7 +228,7 @@
 							</li>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Mail:</div></div>
-								<div class="footer_contact_text"><a href="mailto:info@acasadimarco.es" target=”_blank”>info@acasadimarco.es</a></div>
+								<div class="footer_contact_text"><a href="mailto:reservas@acasadimarco.es" target=”_blank”>reservas@acasadimarco.es</a></div>
 							</li>
 						</ul>
 					</div>
