--- a/elements.html
+++ b/elements.html
@@ -412,11 +412,11 @@
 					<div class="copyright"><div class="contact_social">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
 									<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+									<li><a href="https://www.facebook.com/profile.php?id=100092610999517"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+									<li><a href="https://twitter.com/A_casa_di_Marco"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 									<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
 									<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/a-casa-di-marco-72a367276/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 								</ul>
 							</div></div>
 				</div>
