--- a/contact.html
+++ b/contact.html
@@ -149,11 +149,11 @@
 							</ul>
 							<div class="contact_social">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li><a href="https://www.facebook.com/profile.php?id=100092610999517"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-									<li><a href="https://twitter.com/A_casa_di_Marco"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/a-casa-di-marco-72a367276/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+									<li><a href="https://www.facebook.com/profile.php?id=100092610999517" target=”_blank”><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+									<li><a href="https://www.instagram.com/acasadimarco_2023/" target=”_blank”><i class="fa fa-instagram" aria-hidden="true" target=”_blank”></i></a></li>
+									<li><a href="https://twitter.com/A_casa_di_Marco" target=”_blank”><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+									<li><a href="#" target=”_blank”><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/a-casa-di-marco-72a367276/" target=”_blank”><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -225,11 +225,11 @@
 					</div>
 					<div class="copyright"><div class="contact_social">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li><a href="https://www.facebook.com/profile.php?id=100092610999517"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-									<li><a href="https://twitter.com/A_casa_di_Marco"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-									<li><a href="#"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/a-casa-di-marco-72a367276/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+									<li><a href="https://www.facebook.com/profile.php?id=100092610999517" target=”_blank”><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+									<li><a href="https://www.instagram.com/acasadimarco_2023/" target=”_blank”><i class="fa fa-instagram" aria-hidden="true" target=”_blank”></i></a></li>
+									<li><a href="https://twitter.com/A_casa_di_Marco" target=”_blank”><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+									<li><a href="#" target=”_blank”><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+									<li><a href="https://www.linkedin.com/in/a-casa-di-marco-72a367276/" target=”_blank”><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 								</ul>
 							</div></div>
 				</div>
