--- a/elements.html
+++ b/elements.html
@@ -412,11 +412,11 @@
 					<div class="copyright"><div class="contact_social">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
 									<li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-									<li><a href="https://www.facebook.com/profile.php?id=100092610999517"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-									<li><a href="https://twitter.com/A_casa_di_Marco"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+									<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+									<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
 									<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
 									<li><a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a></li>
-									<li><a href="https://www.linkedin.com/in/a-casa-di-marco-72a367276/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+									<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 								</ul>
 							</div></div>
 				</div>
@@ -444,12 +444,28 @@
 							</li>
 							<li class="d-flex flex-row align-items-start justify-content-start">
 								<div><div class="footer_contact_title">Mail:</div></div>
-								<div class="footer_contact_text"><a href="mailto:reservas@acasadimarco.es" target=”_blank”>reservas@acasadimarco.es</a></div>
+								<div class="footer_contact_text"><a href="mailto:info@acasadimarco.es" target=”_blank”>info@acasadimarco.es</a></div>
 							</li>
 						</ul>
 					</div>
 				</div>
-			</div>
+			</div><div class="orario">
+<table style="width:100%">
+  <tr>
+    <th>Lunes a Jueves</th>
+    <th>Viernes </th>
+    <th>Sabado</th>
+    <th>Domingo</th>
+  </tr>
+  <tr>
+    <td>8:00h-16:00h <br> 18:00h-23:00h</td>
+    <td>8:00h-16:00h <br> 18:00h-00:30h</td>
+    <td>10:00h-16:00h <br> 18:00h-00:30h</td>
+    <td>10:30h-16:00h <br> 18:00-22:30h</td>
+  </tr>
+  
+</table>
+</div>
 		</div>
 	</footer>
 </div>
