--- a/elements.html
+++ b/elements.html
@@ -213,20 +213,9 @@
 							<div class="col-xl-3 col-md-6 loader_col">
 								<!-- Loader -->
 								<div class="loader_container text-center">
-									<div class="loader text-center" data-perc="0.80"></div>
+									<div class="loader text-center" data-perc="1.00"></div>
 									<div class="loader_content">
-										<div class="loader_title">Deserts</div>
-									</div>
-								</div>
-							</div>
-
-							<!-- Loader -->
-							<div class="col-xl-3 col-md-6 loader_col">
-								<!-- Loader -->
-								<div class="loader_container text-center">
-									<div class="loader text-center" data-perc="0.20"></div>
-									<div class="loader_content">
-										<div class="loader_title">Pasta</div>
+										<div class="loader_title">Professionalidad</div>
 									</div>
 								</div>
 							</div>
@@ -237,7 +226,7 @@
 								<div class="loader_container text-center">
 									<div class="loader text-center" data-perc="1.00"></div>
 									<div class="loader_content">
-										<div class="loader_title">Perfect</div>
+										<div class="loader_title">Autenticidad</div>
 									</div>
 								</div>
 							</div>
@@ -246,9 +235,20 @@
 							<div class="col-xl-3 col-md-6 loader_col">
 								<!-- Loader -->
 								<div class="loader_container text-center">
-									<div class="loader text-center" data-perc="0.95"></div>
+									<div class="loader text-center" data-perc="1.00"></div>
 									<div class="loader_content">
-										<div class="loader_title">Main Courses</div>
+										<div class="loader_title">Pasión</div>
+									</div>
+								</div>
+							</div>
+
+							<!-- Loader -->
+							<div class="col-xl-3 col-md-6 loader_col">
+								<!-- Loader -->
+								<div class="loader_container text-center">
+									<div class="loader text-center" data-perc="1.00"></div>
+									<div class="loader_content">
+										<div class="loader_title">Ambiente acogedor</div>
 									</div>
 								</div>
 							</div>
