--- a/index.html
+++ b/index.html
@@ -846,11 +846,11 @@
 									</div>
 				</div>
 
-				<!-- Bocalillos -->
+				<!-- BOCADILLOS -->
 				<div class="col-lg-4 themenu_column">
 				<div class="themenu_col">
-				<div class="themenu_col_title boccalillos-toggle">BOCALILLOS</div>
-				<div class="dish_list boccalillos-content">
+				<div class="themenu_col_title boccadillos-toggle">BOCADILLOS</div>
+				<div class="dish_list boccadillos-content">
 				
 											<!-- Dish -->
 											<div class="dish">
