menu del giorno

--- a/blog.html
+++ b/blog.html
@@ -125,20 +125,20 @@
 				<div class="col-lg-6 blog_col">
 					<div class="blog_post">
 						<div class="blog_post_image_container">
-							<div class="blog_post_image"><img src="images/blog_1.jpg" alt="https://unsplash.com/@patrick_schneider"></div>
-							<div class="blog_post_date"><a href="#">June 18, 2018</a></div>
+							<div class="blog_post_image"><img src="images/menudeldia.jpeg" alt="menu del dia"></div>
+							<div class="blog_post_date"><a href="#">Mayo 16, 2023</a></div>
 						</div>
 						<div class="blog_post_content">
-							<div class="blog_post_title"><a href="#">Our Nomenee at the Restaurants Awards</a></div>
+							<div class="blog_post_title"><a href="#">Todas las semanas, de lunes a viernes hasta las 4 de la tarde.</a></div>
 							<div class="blog_post_info">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li>by <a href="#">George Smith</a></li>
-									<li>in <a href="#">Lifestyle</a></li>
-									<li><a href="#">2 Comments</a></li>
+									<li>by <a href="#">Chef Marco</a></li>
+									<!-- <li>in <a href="#">Lifestyle</a></li>
+									<li><a href="#">2 Comments</a></li> -->
 								</ul>
 							</div>
 							<div class="blog_post_text">
-								<p>Gracias por visitar nuestro sitio web. Esperamos haberle hecho agua la boca con nuestra deliciosa cocina italiana y española. Estamos deseando darle la bienvenida en nuestro restaurante y hacerle probar nuestros platos preparados con ingredientes de alta calidad. Para reservas o información, no dude en ponerse en contacto con nosotros por teléfono o correo electrónico, estaremos encantados de ayudarle. Suspendisse potenti.</p>
+								<p>¡Ven y prueba nuestra oferta, disponible de lunes a viernes hasta las 4 pm! Elige entre 4 exquisitos primeros platos y 3 deliciosos segundos. Para completar tu comida, incluimos una bebida a tu elección: cerveza, vino de la casa o bebida sin alcohol. Reserva tu mesa para disfrutar de una comida completa y satisfactoria en nuestro acogedor restaurante. Te espera la combinación perfecta de platos sabrosos y bebidas refrescantes. No te pierdas esta oportunidad de vivir una experiencia culinaria memorable. Te esperamos para brindarte una experiencia inolvidable en nuestro restaurante. Ven y prueba nuestras opciones del día y déjate tentar por los irresistibles sabores. El almuerzo perfecto te espera en nuestro local. Reserva ahora y disfruta de una oferta especial que no puedes perder.</p>
 							</div>
 						</div>
 					</div>
