--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 		<div class="background_image" style="background-image:url(images/squid.png)"></div>
 		<div class="video_section_content d-flex flex-column align-items-center justify-content-center text-center">
 			<div class="video_section_title">Comida para el alma</div>
-			<div class="video_section_icon"><a class="vimeo video_button" href="https://www.youtube.com/embed/qozV91dyVig"><i class="fa fa-play" aria-hidden="true"></i></a></div>
+			<div class="video_section_icon"><a class="vimeo video_button" href="https://www.youtube.com/embed/i6YhEX07FwA"><i class="fa fa-play" aria-hidden="true"></i></a></div>
 		</div>
 	</div>
 
