--- a/about.html
+++ b/about.html
@@ -255,8 +255,8 @@
 			<div class="row">
 				<div class="col text-center">
 					<div class="section_title_container">
-						<div class="section_subtitle page_subtitle">What they say</div>
-						<div class="section_title"><h1>Testimonials</h1></div>
+						<div class="section_subtitle page_subtitle">Lo que dicen</div>
+						<div class="section_title"><h1>Reseñas de Google</h1></div>
 					</div>
 				</div>
 			</div>
@@ -271,10 +271,44 @@
 							<div class="owl-item text-center">
 								<div class="quote ml-auto mr-auto"><img src="images/quote.png" alt=""></div>
 								<div class="test_text">
-									<p>Gracias por visitar nuestro sitio web. Esperamos haberle hecho agua la boca con nuestra deliciosa cocina italiana y española. Estamos deseando darle la bienvenida en nuestro restaurante y hacerle probar nuestros platos preparados con ingredientes de alta calidad. Para reservas o información, no dude en ponerse en contacto con nosotros por teléfono o correo electrónico, estaremos encantados de ayudarle. Suspendisse potenti. Vivamus luctus diam eu neque rutrum, vitae aliquet dolor venenatis. Nulla consequat fringilla massa.</p>
+									<p>Es un lugar muy acogedor, te reciben con los brazos abiertos. Es un buen sitio para desayunar, comer y cenar. La calidad precio es buenísima. Lo recomiendo a todo el mundo porque van a pasar una experiencia muy buena. Y lo más importante, es diferente a los demás sitios. No os arrepentiréis si venís.</p>
 								</div>
-								<div class="test_info">James Smith, <span>Client</span></div>
+								<div class="test_info">Alicia García Barrao, <span>Client</span></div>
 							</div>
+
+							<div class="owl-item text-center">
+								<div class="quote ml-auto mr-auto"><img src="images/quote.png" alt=""></div>
+								<div class="test_text">
+									<p>Muy buenas sensaciones desde el primer día: seguramente el mejor café del barrio, tarta de queso excelente y el trato al cliente superior.
+										Además, creo que han incluido menú del día y otros platos típicos de la gastronomía italiana como lasagna y pizza frita napolitana. Muy recomendable.</p>
+								</div>
+								<div class="test_info">Jorge Olleros, <span>Client</span></div>
+							</div>
+
+							<div class="owl-item text-center">
+								<div class="quote ml-auto mr-auto"><img src="images/quote.png" alt=""></div>
+								<div class="test_text">
+									<p>Exquisita comida italiana, el trato, muy agradable y simpático.  Todo en su punto y rápido.</p>
+								</div>
+								<div class="test_info">Reyes Andres Mateo, <span>Client</span></div>
+							</div>
+
+							<div class="owl-item text-center">
+								<div class="quote ml-auto mr-auto"><img src="images/quote.png" alt=""></div>
+								<div class="test_text">
+									<p>Un sitio muy recomendable. Buen servicio y muy atentos. Todo buenísimo. Recomiendo la pasta y los calamares. Repetiré seguro.</p>
+								</div>
+								<div class="test_info">ADRIANA SÁNCHEZ BERNAD, <span>Client</span></div>
+							</div>
+
+							<div class="owl-item text-center">
+								<div class="quote ml-auto mr-auto"><img src="images/quote.png" alt=""></div>
+								<div class="test_text">
+									<p>Es un sitio acogedor, con una atención buenísima y unos platos exquisitos. Sin duda de las mejores opciones de la zona. Son super amables y atentos y con muy buen servicio. Lo recomiendo, si pruebas, repites👍</p>
+								</div>
+								<div class="test_info">Antoyola, <span>Client</span></div>
+							</div>
+
 						</div>
 					</div>
 				</div>
