--- a/blog.html
+++ b/blog.html
@@ -125,11 +125,11 @@
 				<div class="col-lg-6 blog_col">
 					<div class="blog_post">
 						<div class="blog_post_image_container">
-							<div class="blog_post_image"><img src="images/menudeldia.jpeg" alt="menu del dia"></div>
+							<div class="blog_post_image"><img src="images/menudeldia.png" alt="menu del dia"></div>
 							<div class="blog_post_date"><a href="#">Mayo 16, 2023</a></div>
 						</div>
 						<div class="blog_post_content">
-							<div class="blog_post_title"><a href="#">Todas las semanas, de lunes a viernes hasta las 4 de la tarde.</a></div>
+							<div class="blog_post_title"><a href="#">Todas las semanas, de lunes a viernes hasta las 15:30 de la tarde.</a></div>
 							<div class="blog_post_info">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
 									<li>by <a href="#">Chef Marco</a></li>
@@ -138,7 +138,7 @@
 								</ul>
 							</div>
 							<div class="blog_post_text">
-								<p>¡Ven y prueba nuestra oferta, disponible de lunes a viernes hasta las 4 pm! Elige entre 4 exquisitos primeros platos y 3 deliciosos segundos. Para completar tu comida, incluimos una bebida a tu elección: cerveza, vino de la casa o bebida sin alcohol. Reserva tu mesa para disfrutar de una comida completa y satisfactoria en nuestro acogedor restaurante. Te espera la combinación perfecta de platos sabrosos y bebidas refrescantes. No te pierdas esta oportunidad de vivir una experiencia culinaria memorable. Te esperamos para brindarte una experiencia inolvidable en nuestro restaurante. Ven y prueba nuestras opciones del día y déjate tentar por los irresistibles sabores. El almuerzo perfecto te espera en nuestro local. Reserva ahora y disfruta de una oferta especial que no puedes perder.</p>
+								<p>¡Ven y prueba nuestra oferta, disponible de lunes a viernes hasta las 15:30! Elige entre 3 exquisitos primeros platos y 2 deliciosos segundos. Para completar tu comida, incluimos una bebida a tu elección: cerveza, vino de la casa o bebida sin alcohol. Reserva tu mesa para disfrutar de una comida completa y satisfactoria en nuestro acogedor restaurante. Te espera la combinación perfecta de platos sabrosos y bebidas refrescantes. No te pierdas esta oportunidad de vivir una experiencia culinaria memorable. Te esperamos para brindarte una experiencia inolvidable en nuestro restaurante. Ven y prueba nuestras opciones del día y déjate tentar por los irresistibles sabores. El almuerzo perfecto te espera en nuestro local. Reserva ahora y disfruta de una oferta especial que no puedes perder.</p>
 							</div>
 						</div>
 					</div>
@@ -148,16 +148,16 @@
 				<div class="col-lg-6 blog_col">
 					<div class="blog_post">
 						<div class="blog_post_image_container">
-							<div class="blog_post_image"><img src="images/blog_2.jpg" alt="https://unsplash.com/@tashytown"></div>
-							<div class="blog_post_date"><a href="#">June 18, 2018</a></div>
+							<div class="blog_post_image"><img src="images/menuejecutivo.png" alt="Jackelin Slack"></div>
+							<div class="blog_post_date"><a href="#">Mayo 25, 2023</a></div>
 						</div>
 						<div class="blog_post_content">
-							<div class="blog_post_title"><a href="#">Recipe of the week</a></div>
+							<div class="blog_post_title"><a href="#">Todas las semanas, de lunes a viernes hasta las 15:30 de la tarde.</a></div>
 							<div class="blog_post_info">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li>by <a href="#">George Smith</a></li>
-									<li>in <a href="#">Lifestyle</a></li>
-									<li><a href="#">2 Comments</a></li>
+									<li>by <a href="#">Chef Marco</a></li>
+									<!-- <li>in <a href="#">Lifestyle</a></li>
+									<li><a href="#">2 Comments</a></li> -->
 								</ul>
 							</div>
 							<div class="blog_post_text">
@@ -171,20 +171,20 @@
 				<div class="col-lg-6 blog_col">
 					<div class="blog_post">
 						<div class="blog_post_image_container">
-							<div class="blog_post_image"><img src="images/blog_3.jpg" alt="https://unsplash.com/@stefanjonhson"></div>
-							<div class="blog_post_date"><a href="#">June 18, 2018</a></div>
+							<div class="blog_post_image"><img src="images/calzone.jpg" alt="calzone"></div>
+							<div class="blog_post_date"><a href="#">Mayo 10, 2023</a></div>
 						</div>
 						<div class="blog_post_content">
-							<div class="blog_post_title"><a href="#">Our Nomenee at the Restaurants Awards</a></div>
+							<div class="blog_post_title"><a href="#">La auténtica pizza frita napolitana</a></div>
 							<div class="blog_post_info">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li>by <a href="#">George Smith</a></li>
-									<li>in <a href="#">Lifestyle</a></li>
-									<li><a href="#">2 Comments</a></li>
+									<li>by <a href="#">Chef Marco</a></li>
+									<!-- <li>in <a href="#">Lifestyle</a></li>
+									<li><a href="#">2 Comments</a></li> -->
 								</ul>
 							</div>
 							<div class="blog_post_text">
-								<p>Gracias por visitar nuestro sitio web. Esperamos haberle hecho agua la boca con nuestra deliciosa cocina italiana y española. Estamos deseando darle la bienvenida en nuestro restaurante y hacerle probar nuestros platos preparados con ingredientes de alta calidad. Para reservas o información, no dude en ponerse en contacto con nosotros por teléfono o correo electrónico, estaremos encantados de ayudarle. Suspendisse potenti.</p>
+								<p>Ven a nuestro restaurante y prueba la típica pizza frita napolitana,, una explosión de sabores tradicionales. Preparado con amor y maestría, nuestro calzone te transportará directamente a la tradición culinaria de Nápoles. La masa suave y esponjosa envuelve un irresistible relleno de mozzarella fundida, tomate fresco, salami, jamón y mucho más. Cada bocado será una experiencia de sabor auténtica y satisfactoria. Acompaña tu calzone con un buen vino italiano o una sangría española para completar tu comida con un toque de sofisticación. En nuestro ambiente acogedor y amigable, podrás disfrutar de lo mejor de ambas culturas culinarias. Reserva tu mesa y emprende un viaje gastronómico inolvidable con nuestra auténtica pizza frita napolitana.</p>
 							</div>
 						</div>
 					</div>
@@ -194,27 +194,27 @@
 				<div class="col-lg-6 blog_col">
 					<div class="blog_post">
 						<div class="blog_post_image_container">
-							<div class="blog_post_image"><img src="images/blog_4.jpg" alt="Jackelin Slack"></div>
-							<div class="blog_post_date"><a href="#">June 18, 2018</a></div>
+							<div class="blog_post_image"><img src="images/colazione.png" alt="colazione"></div>
+							<div class="blog_post_date"><a href="#">Todas las semanas</a></div>
 						</div>
 						<div class="blog_post_content">
-							<div class="blog_post_title"><a href="#">Our Nomenee at the Restaurants Awards</a></div>
+							<div class="blog_post_title"><a href="#">Comienza tu día en A casa di Marco</a></div>
 							<div class="blog_post_info">
 								<ul class="d-flex flex-row align-items-center justify-content-start">
-									<li>by <a href="#">George Smith</a></li>
-									<li>in <a href="#">Lifestyle</a></li>
-									<li><a href="#">2 Comments</a></li>
+									<li>by <a href="#">Chef Marco</a></li>
+									<!-- <li>in <a href="#">Lifestyle</a></li>
+									<li><a href="#">2 Comments</a></li> -->
 								</ul>
 							</div>
 							<div class="blog_post_text">
-								<p>Gracias por visitar nuestro sitio web. Esperamos haberle hecho agua la boca con nuestra deliciosa cocina italiana y española. Estamos deseando darle la bienvenida en nuestro restaurante y hacerle probar nuestros platos preparados con ingredientes de alta calidad. Para reservas o información, no dude en ponerse en contacto con nosotros por teléfono o correo electrónico, estaremos encantados de ayudarle. Suspendisse potenti.</p>
+								<p>Ven y disfruta de un desayuno inolvidable en nuestro restaurante italo/español. Te ofrecemos una experiencia culinaria única para comenzar tu día de la mejor manera. Elige entre una amplia selección de delicias para el desayuno, desde opciones tradicionales italianas hasta sabrosas especialidades españolas. Deléitate con croissants recién horneados, pan fresco con mermelada o quesos gourmet, huevos preparados al momento y mucho más. Acompaña tu desayuno con un café aromático o un jugo de frutas fresco. Nuestro personal amable y atento te garantizará un servicio excelente, mientras que la atmósfera acogedora de nuestro local te hará sentir como en casa. Reserva tu mesa y regálate un desayuno memorable en nuestro restaurante italo/español, donde la calidad y la variedad se fusionan para crear una experiencia gastronómica única.</p>
 							</div>
 						</div>
 					</div>
 				</div>
 
 				<!-- Blog Post -->
-				<div class="col-lg-6 blog_col">
+				<!-- <div class="col-lg-6 blog_col">
 					<div class="blog_post">
 						<div class="blog_post_image_container">
 							<div class="blog_post_image"><img src="images/blog_5.jpg" alt="https://unsplash.com/@mantra_media_ltd"></div>
@@ -234,10 +234,10 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				<!-- Blog Post -->
-				<div class="col-lg-6 blog_col">
+				<!-- <div class="col-lg-6 blog_col">
 					<div class="blog_post">
 						<div class="blog_post_image_container">
 							<div class="blog_post_image"><img src="images/blog_6.jpg" alt="https://unsplash.com/@brookelark"></div>
@@ -257,7 +257,7 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 			</div>
 			<div class="row load_more_row">
