--- a/delivery.html
+++ b/delivery.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 <title>A casa di Marco</title>
 <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+<meta name="keywords" content="restaurante italo-español, comida italiana, comida española, gastronomía mediterránea, menú italiano, menú español, platos tradicionales, fusión gastronómica, sabores italianos, sabores españoles">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="A casa di Marco">
