--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
 <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <meta name="keywords" content="restaurante italo-español, comida italiana, comida española, gastronomía mediterránea, menú italiano, menú español, platos tradicionales, fusión gastronómica, sabores italianos, sabores españoles">
 <meta charset="utf-8">
+<meta name="author" content="Nicola Genovese">
+<meta name="publisher" content="Nicola Genovese">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="A casa di Marco">
 <meta name="viewport" content="width=device-width, initial-scale=1">
