--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <meta name="description" content="A casa di Marco">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="google-site-verification" content="K3KZVzfvGY163bUhp-HiZljJlZPWHG40rcMdIF9Z4hI" />
+<meta name="robots" content="index,follow">
 <link rel="canonical" href="https://www.acasadimarco.es/index.html">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
