--- a/menu.html
+++ b/menu.html
@@ -10,6 +10,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="A casa di Marco">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="robots" content="menu,follow">
 <link rel="canonical" href="https://www.acasadimarco.es/menu.html">
 <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
 <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
