--- a/index.html
+++ b/index.html
@@ -1682,8 +1682,8 @@
                            <!-- Dish -->
                            <div class="dish">
                               <div class="dish_title_container d-flex flex-xl-row flex-column align-items-start justify-content-start">
-                                 <div class="dish_title">TORREZNOS</div>
-                                 <div class="dish_price">2.0€</div>
+                                 <div class="dish_title">PATATA DE BOLSA</div>
+                                 <div class="dish_price">1.4€</div>
                               </div>
                               <!-- <div class="dish_order"><a href="#">Order Now</a></div> -->
                            </div>
