--- a/contact.html
+++ b/contact.html
@@ -269,20 +269,19 @@
 				</div>
 			</div>
 			<div class="orario">
+				<p class="martes">Martes serrado</p>
 				<table style="width:100%">
 				   <tr>
 					  <th>Lunes a Jueves</th>
-					  <th class="martes">Martes</th>
 					  <th>Viernes </th>
 					  <th>Sabado</th>
-					  <th>Domingo</th>
+					  <th>Domingo</th>                       
 				   </tr>
 				   <tr>
-					  <td>11:00h-16:00h <br> 19:00h-23:00h</td>
-					  <td class="martes">Cerrado</td>
-					  <td>11:00h-16:00h <br> 19:00h-00:00h</td>
-					  <td>11:00h-16:00h <br> 19:00h-00:00h</td>
-					  <td>10:30h-16:00h <br> 19:00-22:30h</td>
+					  <td>10:00h-16:00h <br> 18:00h-22:00h</td>
+					  <td>10:00h-16:00h <br> 18:00h-23:00h</td>
+					  <td>11:00h-16:00h <br> 18:00h-00:00h</td>
+					  <td>11:00h-16:00h <br> 18:00-22:30h</td>
 				   </tr>
 				</table>
 			 </div>
